--- a/styles/header.css
+++ b/styles/header.css
@@ -1,11 +1,12 @@
 #primary {
     padding-block: 20px;
 
+    /* não sei pq não funcionou
     div {
         display: flex;
         align-items: center;
         gap: 8px;
-    }
+    } */
 
     /* nesting css */
     div:nth-child(2) {
@@ -15,6 +16,12 @@
     div:nth-child(3) {
         justify-self: end;
     }
+}
+
+.flex-align {
+     display: flex;
+        align-items: center;
+        gap: 8px;
 }
 
 #secondary {
